--- a/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
+++ b/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  7.93e-01_{ 4.1e-02}$ \\
+AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ AntiSpamFilterProblem & \cellcolor{gray95}$  7.93e-01_{ 4.1e-02}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  7.85e-01_{ 7.5e-02}$ \\
+AntiSpamFilterProblem & $  0.00e+00_{ 0.0e+00}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
