--- a/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
+++ b/experimentBaseDirectory/AntiSpamStudy/latex/AntiSpamStudy.tex
@@ -17,7 +17,7 @@
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  2.13e-01_{ 2.2e-01}$ \\
+AntiSpamFilterProblem & \cellcolor{gray95}$  3.33e-02_{ 7.5e-02}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -31,7 +31,7 @@ AntiSpamFilterProblem & \cellcolor{gray95}$  2.13e-01_{ 2.2e-01}$ \\
 \begin{tabular}{ll}
 \hline &  NSGAII\\
 \hline 
-AntiSpamFilterProblem & \cellcolor{gray95}$  1.88e-01_{ 4.4e-01}$ \\
+AntiSpamFilterProblem & $  0.00e+00_{ 8.3e-02}$ \\
 \hline
 \end{tabular}
 \end{scriptsize}
